2008-10-07 yusei
* Update field titles for translation.

2008-09-27 yusei
* Added checked_permission argument to contentValues method in
RequirementDocument_getOrphanedRequirementUidList and RequirementDocument_getProjectCoverageList.

2008-09-24 yusei
* Fixed a bug in Requirement_generateRequirements.

2008-09-22 yusei
* Fixed Generate References bug.

2008-09-16 Kazuhiko
* revise task_invoice_builder and task_report_builder using new API.
* use  delivery_causality_workflow instead of invoice_causality_workflow in Task Report.

2008-09-10 vincentd
* Set default selection for Quantity Unit and Currency and fix a little pb on Client

2008-09-10 vincentd
* Change action Title and Return message

2008-09-10 vincentd
* Fix the Quantity input and remove the total price input

2008-09-09 vincentd
* Fix the Create Task action condition

2008-09-09 vincentd
* fix dialog name and script arguments

2008-09-08 vincentd
* add an action for create a task from a sale order line

2008-09-07 yusei
* Update English messages.

2008-08-28 yusei
* Use Base_translateString or translateString instead of N_ for translation message.

2008-06-13 yusei
* Removed unused action in Project type information.

2008-06-11 rafael
* Use portal_notifications to send messages.

2008-06-11 yo
* Add a notification for finishing a task report.

2008-06-03 vincentd
* Add all rights for manager in :
project_workflow  :  Deleted, Open
task_report_causality_workflow  :  Building, Solving
task_report_workflow  :  Delivered, Deleted, Cancelled
task_workflow  :  Confirmed, Deleted, Cancelled
2008-04-12 rafael
* added new domains for Project_viewPlanning

2008-03-28 Yusei
* Copy task's destination_decision value to task report.

2008-03-12 Fabien
* associate Requirement Document to a validation workflow.
* set role acquisition to 0

2008-03-03 Seb
* added tab in order to see task reports
on project
* added 3 reports :
- one to see tasks
- one for task or tasks reports if the
task is validated