@@ -53,44 +53,86 @@
         </item>
         <item>
             <key> <string>_body</string> </key>
-            <value> <string>request = context.REQUEST\n
+            <value> <string encoding="cdata"><![CDATA[
+
+restrictedTraverse = context.getPortalObject().restrictedTraverse\n
 domain_list = []\n
 \n
+def Task_getRelatedSourceProject(depth, parent_relative_url=None):\n
+  if depth == 0:\n
+    task_uid_list  = context.portal_selections.getSelectionUidList(context=context, selection_name=\'task_report_module_selection\')\n
+    project_result = context.portal_catalog(portal_type=["Project", "Project Line"],\n
+                                            source_project_related_uid=task_uid_list,\n
+                                            select_expression=\'catalog.portal_type, catalog.relative_url, catalog.id, catalog.title\',\n
+                                            sort_on = ((\'title\',\'ascending\'),))\n
+  else:\n
+    project_result = context.portal_catalog(portal_type=["Project Line", "Project Milestones"],\n
+                                            select_expression=\'catalog.portal_type, catalog.relative_url, catalog.id, catalog.title\',\n
+                                            parent_relative_url=parent_relative_url,\n
+                                            sort_on = ((\'title\',\'ascending\'),))\n
+  # use a dict to store catalog result\n
+  project_dict = {}\n
+  category_dict = {}\n
+  project_list = []\n
+  append = project_list.append\n
+  for x in project_result:\n
+    key = x.uid\n
+    if key not in project_dict:\n
+      project_dict[key] = None\n
+      category_dict = {\'relative_url\':x.relative_url, \n
+                       \'portal_type\':x.portal_type,\n
+                       \'id\':x.id,\n
+                       \'title\':x.title,\n
+                       \'uid\':x.uid}\n
+      append(category_dict)\n
+    \n
+  return project_list\n
 \n
-if depth == 0:\n
-  category_list = []\n
-  for task in context.portal_selections.getSelectionValueList(context=context,\n
-                                                           selection_name=\'task_report_module_selection\'):\n
-    source_project_value_list = \\\n
-      task.getSourceProjectValueList(portal_type=["Project", "Project Line"])\n
-    for source_project_value in source_project_value_list:\n
-      if source_project_value.getPortalType() == \'Project\':\n
-        category = source_project_value\n
-      else:\n
-        category = source_project_value.getExplanationValue()\n
-      if category not in category_list:\n
-        category_list.append(category)\n
-  \n
-else:\n
-  category_list = []\n
-  for i in context.portal_selections.getSelectionValueList(context=context,\n
-                                                           selection_name=\'task_report_module_selection\'):\n
-    category_list.extend([j for j in i.getSourceProjectValueList(portal_type=["Project Line", "Project Milestones"]) \\\n
-                                                            if (j not in category_list) and (j.getParentRelativeUrl() in parent.getMembershipCriterionCategoryList())])\n
+def Task_getRelatedSourceProjectCategory(depth):\n
+  parent_relative_url = None\n
+  if depth > 0:\n
+    parent_relative_url = parent.getMembershipCriterionCategoryList()\n
+  project_list = Task_getRelatedSourceProject(depth=depth,\n
+                                              parent_relative_url=parent_relative_url)\n
 \n
+  category_dict = {}\n
+  category_list = []\n
+  append = category_list.append\n
+\n
+  for project in project_list:\n
+    if project[\'portal_type\'] == \'Project\' or depth > 0:\n
+      category = project\n
+    else:\n
+      # XXX here we need to get the project line object to get the explanation value\n
+      project_line_value = restrictedTraverse(project[\'relative_url\'])\n
+      explanation_value = project_line_value.getExplanationValue()\n
+      category = {\'relative_url\':explanation_value.getRelativeUrl(), \n
+                  \'portal_type\':explanation_value.getPortalType(),\n
+                  \'id\':explanation_value.getId(),\n
+                  \'title\':explanation_value.getTitle(),\n
+                  \'uid\':explanation_value.getUid()}\n
+    key = category[\'uid\']\n
+    if key not in category_dict:\n
+      category_dict[key] = None\n
+      append(category)\n
+\n
+  return category_list\n
+\n
+category_list = Task_getRelatedSourceProjectCategory(depth)\n
 \n
 for category in category_list:\n
-  domain = parent.generateTempDomain(id = \'sub\' + category.getId() )\n
-  domain.edit(title = category.getTitle(),\n
+  domain = parent.generateTempDomain(id = \'sub\' + category[\'id\'] )\n
+  domain.edit(title = category[\'title\'],\n
               membership_criterion_base_category = (\'source_project\', ), \n
-              membership_criterion_category = (category.getRelativeUrl(),),\n
+              membership_criterion_category = (category[\'relative_url\'],),\n
               domain_generator_method_id = script.id,\n
-              uid = category.getUid())\n
+              uid = category[\'uid\'])\n
                 \n
   domain_list.append(domain)\n
-\n
 return domain_list\n
-</string> </value>
+
+
+]]></string> </value>
         </item>
         <item>
             <key> <string>_code</string> </key>
@@ -131,18 +173,15 @@ return domain_list\n
                             <string>kw</string>
                             <string>_getattr_</string>
                             <string>context</string>
-                            <string>request</string>
+                            <string>restrictedTraverse</string>
                             <string>domain_list</string>
+                            <string>None</string>
+                            <string>Task_getRelatedSourceProject</string>
+                            <string>Task_getRelatedSourceProjectCategory</string>
                             <string>category_list</string>
                             <string>_getiter_</string>
-                            <string>task</string>
-                            <string>source_project_value_list</string>
-                            <string>source_project_value</string>
                             <string>category</string>
-                            <string>i</string>
-                            <string>append</string>
-                            <string>$append0</string>
-                            <string>j</string>
+                            <string>_getitem_</string>
                             <string>domain</string>
                             <string>script</string>
                           </tuple>
